[package]
name = "squiggle-stylus"
version = "0.1.11"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/squiggle-stylus"
repository = "https://github.com/OffchainLabs/squiggle-stylus"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
    "sha3-keccak",
] }
alloy-sol-types = { version = "=0.8.20", default-features = false }
mini-alloc = "0.4.2"
stylus-sdk = "0.8.1"
hex = "0.4.3"
dotenv = "0.15.0"
openzeppelin-stylus = { git = "https://github.com/OpenZeppelin/rust-contracts-stylus" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
    "sha3-keccak",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "squiggle-stylus"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
